# onnx-llm

./: .gitignore  .gitmodules  CMakeLists.txt  riscv64_build.sh  riscv64_build_linux.sh  riscv64_build_rtos.sh  run.sh  x86_64_build_linux.sh
demo/: cli_demo.cpp  whisper_qwen.cpp
include/: llm.hpp  nncasewrapper.hpp
src/: llm.cpp  llmconfig.hpp  tokenizer.cpp
